# bayc-nft-transfer-monitor

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
bayc_nft_transfer_monitor/: asgi.py  settings.py  urls.py  wsgi.py
monitor/: apps.py  models.py
monitor/migrations/: 0001_initial.py
web3_client/: client.py  minimal_abi.py
