[tool.poetry]
name = "bayc-nft-transfer-monitor"
version = "0.1.0"
description = ""
authors = ["Radih P Paraguas Jr <radihjrprgs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
web3 = "^7.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.0"
isort = "^5.13.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
# Enable type checking of your Django code
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
# Set the path to your Django settings module (replace with your actual settings module)
django_settings_module = "bayc_nft_transfer_monitor.settings"

[mypy.plugins.django-stubs]
ignore_missing_imports = true
